<resources>
    <string name="app_name" translatable="false">Casafy</string>
    <string name="title_routines">Rutinas</string>
    <string name="title_rooms">Habitaciones</string>
    <string name="enter">Entrar</string>
    <string name="title_activity_room" translatable="false">RoomActivity</string>
    <string name="title_activity_device_settings">Configurar dispositivo</string>
    <string name="favorite">Favorito</string>
    <string name="closed">Cerrada</string>
    <string name="opened">Abierta</string>
    <string name="locked">Bloqueada</string>
    <string name="unlocked">Desbloqueada</string>
    <string name="off">Apagado</string>
    <string name="on">Encendido</string>
    <string name="mode">Modo</string>
    <string name="horizontalSwing">Swing horizontal</string>
    <string name="verticalSwing">Swing vertical</string>
    <string name="fanSpeed">Velocidad ventilador</string>
    <string name="heat">Calor</string>
    <string name="convection">Convección</string>
    <string name="grill">Grill</string>
    <string name="setTemperature">Temperatura (°C)</string>
    <string name="setFreezerTemperature">Temperatura del freezer (°C)</string>
    <string name="setBrightness">Brillo</string>
    <string name="conventional">Convencional</string>
    <string name="top">Arriba</string>
    <string name="bottom">Abajo</string>
    <string name="normal">Normal</string>
    <string name="eco">Ecológico</string>
    <string name="large">Grande</string>
    <string name="auto">Auto</string>
    <string name="cool">Frío</string>
    <string name="fan">Ventilador</string>
    <string name="save">Guardar</string>
    <string name="routinePlaying">Ejecutando rutina...</string>
    <string name="routineFinished">¡Rutina ejecutada con exito!</string>
    <string name="connectionFailed">Ha habido un problema al conectar con el servidor.</string>
    <string name="noDevices">No hay dispositivos en esta habitación.</string>
    <string name="routineFailed">Ha habido un problema al conectar con el servidor.</string>
    <string name="setMode">Modo</string>
    <string name="color">Color</string>
    <string name="setColor">Elegir color</string>
    <string name="red">Rojo</string>
    <string name="green">Verde</string>
    <string name="blue">Azul</string>
    <string name="accept">Aceptar</string>
    <string name="newColor">Nuevo color</string>
    <string name="party">Fiesta</string>
    <string name="vacation">Vacaciones</string>
</resources>
